# VSC_G071RB

./: Buildtools.cmake  CMakeLists.txt
Device/: stm32g0xx_hal_conf.h
Lib/SEGGER_RTT/: SEGGER_RTT.h
main/: main.c  main.h
